# global-hedgefund

./: .gitignore  README.md  pyproject.toml
hedgefund/: __init__.py  cli.py  config.py  report.py
hedgefund/agents/: __init__.py  analysts.py  base.py  fund_manager.py  researchers.py  risk.py  trader.py
hedgefund/backtest/: __init__.py  engine.py  features.py  model.py  universes.py
hedgefund/brain/: __init__.py  memory.py  orchestrator.py
hedgefund/data/: __init__.py  base.py  lse_provider.py  offline_provider.py  openbb_provider.py  router.py  yfinance_provider.py
hedgefund/llm/: __init__.py  client.py
hedgefund/portfolio/: __init__.py  book.py  exit_rules.py  health.py
hedgefund/valuation/: __init__.py  dcf.py  monte_carlo.py  thesis.py
tests/: conftest.py  test_agents.py  test_backtest.py  test_brain.py  test_cli.py  test_data.py  test_lse_provider.py  test_portfolio.py  test_valuation.py
